--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -465,3 +465,6 @@ on property:persist.sys.mdm.timeout_disable=1
 on property:sys.boot_completed=1
     setprop sys.io.scheduler cfq
     rm /data/system/perfd/default_values
+
+on property:apexd.status=ready
+    mount none /system/etc/swcodec/ld.config.txt /apex/com.android.media.swcodec/etc/ld.config.txt bind
